--- a/resource_pack/assets/ethereal_grove/lang/en_us.json
+++ b/resource_pack/assets/ethereal_grove/lang/en_us.json
@@ -5,5 +5,8 @@
   "advancements.ethereal_grove.enter_ethereal_grove.title": "Ethereal!",
   "advancements.ethereal_grove.enter_ethereal_grove.description": "Enter the Ethereal Grove dimension through the flower and diamond portal.",
   "advancements.ethereal_grove.root.title": "Ethereal Grove",
-  "advancements.ethereal_grove.root.description": "What ethereal secrets lay here?"
+  "advancements.ethereal_grove.root.description": "What ethereal secrets lay here?",
+  "ethereal_grove.config": "Ethereal Grove Configuration",
+  "ethereal_grove.config.greet_on_init": "Greet on Startup",
+  "ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?"
 }
