--- a/resource_pack/assets/ethereal_grove/lang/en_us.json
+++ b/resource_pack/assets/ethereal_grove/lang/en_us.json
@@ -6,14 +6,18 @@
   "advancements.ethereal_grove.enter_ethereal_grove.description": "Enter the Ethereal Grove dimension through the flower and diamond portal.",
   "advancements.ethereal_grove.root.title": "Ethereal Grove",
   "advancements.ethereal_grove.root.description": "What ethereal secrets lay here?",
-  "ethereal_grove.config": "Ethereal Grove Configuration",
-  "ethereal_grove.config.greet_on_init": "Greet on Startup",
-  "ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?",
-  "ethereal_grove.config.exit": "Exit",
-  "ethereal_grove.config.save": "Save",
-  "ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
-  "ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
-  "ethereal_grove.config.options_input": "Configure Options Below",
+  "menu.ethereal_grove.config": "Ethereal Grove Configuration",
+  "menu.ethereal_grove.config.greet_on_init": "Greet on Startup",
+  "menu.ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?",
+  "menu.ethereal_grove.config.exit": "Exit",
+  "menu.ethereal_grove.config.save": "Save",
+  "menu.ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
+  "menu.ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
+  "menu.ethereal_grove.config.options_input": "Configure Options Below",
+  "menu.ethereal_grove.summon": "Ethereal Grove Summon",
+  "menu.ethereal_grove.summon.description": "Summon any Ethereal Grove entity.",
+  "menu.ethereal_grove.summon.location": "Summon Location (i.e. ~ ~ ~ or 100 64 100)",
   "entity.ethereal_grove.ourghast": "Ourghast",
+  "entity.ethereal_grove.ember_wraith": "Ember Wraith",
   "commands.ethereal_grove.bossbar.delete_all.success": "All boss bars have been deleted. Verify through the /bossbar remove command for stray bossbars the datapack could not detect."
 }
