--- a/resource_pack/assets/ethereal_grove/lang/en_us.json
+++ b/resource_pack/assets/ethereal_grove/lang/en_us.json
@@ -9,7 +9,10 @@
   "menu.ethereal_grove.config": "Ethereal Grove Configuration",
   "menu.ethereal_grove.config.greet_on_init": "Greet on Startup",
   "menu.ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?",
+  "menu.ethereal_grove.config.enable_blocks": "Enable Ethereal Blocks",
+  "menu.ethereal_grove.config.enable_blocks.description": "Blocks through datapacks will always be janky. Enable for some semblance of blocks.",
   "menu.ethereal_grove.config.exit": "Exit",
+  "menu.ethereal_grove.config.reset": "Reset to Default",
   "menu.ethereal_grove.config.save": "Save",
   "menu.ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
   "menu.ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
