--- a/resource_pack/assets/ethereal_grove/lang/en_us.json
+++ b/resource_pack/assets/ethereal_grove/lang/en_us.json
@@ -13,6 +13,14 @@
   "menu.ethereal_grove.config.enable_blocks.description": "Blocks through datapacks will always be janky. Enable for some semblance of blocks.",
   "menu.ethereal_grove.config.exit": "Exit",
   "menu.ethereal_grove.config.reset": "Reset to Default",
+  "menu.ethereal_grove.give": "Give Item",
+  "menu.ethereal_grove.give.description": "Give any Ethereal Grove item. You can use the item ID or the single option menu.",
+  "menu.ethereal_grove.give.item": "Item",
+  "menu.ethereal_grove.give.item_id": "Item ID",
+  "menu.ethereal_grove.give.give_single_option": "Give (using Single Option Menu)",
+  "menu.ethereal_grove.give.give_id": "Give (using ID of Item)",
+  "menu.ethereal_grove.give.count": "Count",
+  "menu.ethereal_grove.give.selector": "Selector (who to give)",
   "menu.ethereal_grove.config.save": "Save",
   "menu.ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
   "menu.ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
@@ -22,5 +30,6 @@
   "menu.ethereal_grove.summon.location": "Summon Location (i.e. ~ ~ ~ or 100 64 100)",
   "entity.ethereal_grove.ourghast": "Ourghast",
   "entity.ethereal_grove.ember_wraith": "Ember Wraith",
-  "commands.ethereal_grove.bossbar.delete_all.success": "All boss bars have been deleted. Verify through the /bossbar remove command for stray bossbars the datapack could not detect."
+  "commands.ethereal_grove.bossbar.delete_all.success": "All boss bars have been deleted. Verify through the /bossbar remove command for stray bossbars the datapack could not detect.",
+  "item.ethereal_grove.developer_dirt": "Developer Dirt"
 }
