🔥 migrated over stellarity block api to ethereal grove

--- a/resource_pack/assets/ethereal_grove/lang/en_us.json
+++ b/resource_pack/assets/ethereal_grove/lang/en_us.json
@@ -1,36 +1,38 @@
 {
-  "ethereal_grove.pack": "Ethereal Grove",
-  "ethereal_grove.data_pack": "A fan inspired datapack of Twilight Forest mod!",
-  "ethereal_grove.resource_pack": "Required resource pack for Ethereal Grove",
-  "advancements.ethereal_grove.enter_ethereal_grove.title": "Ethereal!",
-  "advancements.ethereal_grove.enter_ethereal_grove.description": "Enter the Ethereal Grove dimension through the flower and diamond portal.",
-  "advancements.ethereal_grove.root.title": "Ethereal Grove",
-  "advancements.ethereal_grove.root.description": "What ethereal secrets lay here?",
-  "menu.ethereal_grove.config": "Ethereal Grove Configuration",
-  "menu.ethereal_grove.config.greet_on_init": "Greet on Startup",
-  "menu.ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?",
-  "menu.ethereal_grove.config.enable_blocks": "Enable Ethereal Blocks",
-  "menu.ethereal_grove.config.enable_blocks.description": "Blocks through datapacks will always be janky. Enable for some semblance of blocks.",
-  "menu.ethereal_grove.config.exit": "Exit",
-  "menu.ethereal_grove.config.reset": "Reset to Default",
-  "menu.ethereal_grove.give": "Give Item",
-  "menu.ethereal_grove.give.description": "Give any Ethereal Grove item. You can use the item ID or the single option menu.",
-  "menu.ethereal_grove.give.item": "Item",
-  "menu.ethereal_grove.give.item_id": "Item ID",
-  "menu.ethereal_grove.give.give_single_option": "Give (using Single Option Menu)",
-  "menu.ethereal_grove.give.give_id": "Give (using ID of Item)",
-  "menu.ethereal_grove.give.count": "Count",
-  "menu.ethereal_grove.give.selector": "Selector (who to give)",
-  "menu.ethereal_grove.config.save": "Save",
-  "menu.ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
-  "menu.ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
-  "menu.ethereal_grove.config.options_input": "Configure Options Below",
-  "menu.ethereal_grove.summon": "Ethereal Grove Summon",
-  "menu.ethereal_grove.summon.description": "Summon any Ethereal Grove entity.",
-  "menu.ethereal_grove.summon.location": "Summon Location (i.e. ~ ~ ~ or 100 64 100)",
-  "entity.ethereal_grove.ourghast": "Ourghast",
-  "entity.ethereal_grove.ember_wraith": "Ember Wraith",
-  "entity.ethereal_grove.boxed_ghastling": "Boxed Ghastling",
-  "commands.ethereal_grove.bossbar.delete_all.success": "All boss bars have been deleted. Verify through the /bossbar remove command for stray bossbars the datapack could not detect.",
-  "item.ethereal_grove.developer_dirt": "Developer Dirt"
+	"ethereal_grove.pack": "Ethereal Grove",
+	"ethereal_grove.data_pack": "A fan inspired datapack of Twilight Forest mod!",
+	"ethereal_grove.resource_pack": "Required resource pack for Ethereal Grove",
+	"advancements.ethereal_grove.enter_ethereal_grove.title": "Ethereal!",
+	"advancements.ethereal_grove.enter_ethereal_grove.description": "Enter the Ethereal Grove dimension through the flower and diamond portal.",
+	"advancements.ethereal_grove.root.title": "Ethereal Grove",
+	"advancements.ethereal_grove.root.description": "What ethereal secrets lay here?",
+	"menu.ethereal_grove.config": "Ethereal Grove Configuration",
+	"menu.ethereal_grove.config.greet_on_init": "Greet on Startup",
+	"menu.ethereal_grove.config.greet_on_init.description": "Should there be a greeting in the chat when the datapack is (re)loaded?",
+	"menu.ethereal_grove.config.enable_blocks": "Enable Ethereal Blocks",
+	"menu.ethereal_grove.config.enable_blocks.description": "Blocks through datapacks will always be janky. Enable for some semblance of blocks.",
+	"menu.ethereal_grove.config.exit": "Exit",
+	"menu.ethereal_grove.config.reset": "Reset to Default",
+	"menu.ethereal_grove.give": "Give Item",
+	"menu.ethereal_grove.give.description": "Give any Ethereal Grove item. You can use the item ID or the single option menu.",
+	"menu.ethereal_grove.give.item": "Item",
+	"menu.ethereal_grove.give.item_id": "Item ID",
+	"menu.ethereal_grove.give.give_single_option": "Give (using Single Option Menu)",
+	"menu.ethereal_grove.give.give_id": "Give (using ID of Item)",
+	"menu.ethereal_grove.give.count": "Count",
+	"menu.ethereal_grove.give.selector": "Selector (who to give)",
+	"menu.ethereal_grove.config.save": "Save",
+	"menu.ethereal_grove.config.options_overview": "Hover over the options to see their descriptions.",
+	"menu.ethereal_grove.config.options_overview.description": "Since datapack dialog inputs aren't accessible, descriptions are hoverable here instead.",
+	"menu.ethereal_grove.config.options_input": "Configure Options Below",
+	"menu.ethereal_grove.summon": "Ethereal Grove Summon",
+	"menu.ethereal_grove.summon.description": "Summon any Ethereal Grove entity.",
+	"menu.ethereal_grove.summon.location": "Summon Location (i.e. ~ ~ ~ or 100 64 100)",
+	"entity.ethereal_grove.ourghast": "Ourghast",
+	"entity.ethereal_grove.ember_wraith": "Ember Wraith",
+	"entity.ethereal_grove.boxed_ghastling": "Boxed Ghastling",
+	"commands.ethereal_grove.bossbar.delete_all.success": "All boss bars have been deleted. Verify through the /bossbar remove command for stray bossbars the datapack could not detect.",
+	"message.ethereal_grove.custom_blocks_not_enabled": "Enable custom blocks in the config to place Ethereal Grove blocks.",
+	"item.ethereal_grove.developer_dirt": "Developer Dirt",
+	"block.ethereal_grove.hematite_block": "Hematite Block"
 }
